libs/core/proc_macros/selectable_fields/tests/ui/unit_struct.stderr
error[E0277]: the trait bound `Empty: serde::Serialize` is not satisfied
 --> tests/ui/unit_struct.rs:4:12
  |
4 | pub struct Empty;  // Unit struct - should handle gracefully or fail
  |            ^^^^^ unsatisfied trait bound
  |
help: the trait `Serialize` is not implemented for `Empty`
 --> tests/ui/unit_struct.rs:4:1
  |
4 | pub struct Empty;  // Unit struct - should handle gracefully or fail
  | ^^^^^^^^^^^^^^^^
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Empty` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `SelectableFields`
 --> $WORKSPACE/libs/core/field-selector/src/lib.rs
  |
  | pub trait SelectableFields: Serialize {
  |                             ^^^^^^^^^ required by this bound in `SelectableFields`
