libs/core/proc_macros/selectable_fields/tests/ui/unit_struct.rs
use core_proc_macros::SelectableFields;

#[derive(SelectableFields)]
pub struct Empty;  // Unit struct - should handle gracefully or fail

fn main() {}
